--- a/bkend/src/main/resources/application.properties
+++ b/bkend/src/main/resources/application.properties
@@ -4,3 +4,7 @@ spring.datasource.url=jdbc:h2:mem:testdb
 spring.jpa.show-sql=true
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
+
+springdoc.api-docs.path=/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.swagger-ui.enabled=true
