--- a/bkend/src/main/resources/application.properties
+++ b/bkend/src/main/resources/application.properties
@@ -5,6 +5,9 @@ spring.jpa.show-sql=true
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
+spring.jpa.defer-datasource-initialization=true
+
+
 springdoc.api-docs.path=/api-docs
 springdoc.swagger-ui.path=/swagger-ui.html
 springdoc.swagger-ui.enabled=true
